tradotti commit e branches

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -119,7 +119,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="levels/*, scripts/*, resources/*, cards/*"
 exclude_filter="dependencies/*, cache/*"
-export_path=""
+export_path="build/Oh My Git!.exe"
 script_export_mode=1
 script_encryption_key=""
 
