fixed macOs export

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -44,7 +44,7 @@ custom_template/release=""
 application/name="Oh My Git!"
 application/icon=""
 application/icon_interpolation=4
-application/identifier=""
+application/identifier="org.ohmygit.ita"
 application/signature=""
 application/app_category="Games"
 application/short_version="1.0"
